# PDFbull

./: .gitignore  BUILD_INSTRUCTIONS.md  Cargo.toml  ISSUES_FOUND.md  LICENSE  README.md  THIRD-PARTY-LICENSES.md  build.rs  check.bat  clippy_errors.txt  clippy_head.jsonl  clippy_results.jsonl  cog.toml  fix.py  git_commands.bat  git_commit.txt  git_status.bat  installer.nsi  jsconfig.json  justfile  package.json  plan-dist-manifest.json  subjective_review.json  typos.toml
.antigravitycli/: a548faa2-79ff-43bd-902a-c1732ebd9bcd.json
.github/workflows/: ci.yml  cog.yml  osv-scanner.yml  release.yml  stable.yml
benches/: render_bench.rs
src/: annotations.rs  app.rs  commands.rs  compression.rs  engine.rs  filters.rs  index.html  lib.rs  main.js  main.rs  message.rs  models.rs  pdf_engine.rs  storage.rs  styles.css  types.d.ts  ui.rs  ui_document.rs  ui_keyboard_help.rs  ui_metadata.rs  ui_settings.rs  ui_welcome.rs  update.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: annotations.rs  check_output_v21.txt  compression.rs  diag_v7.rs  filters.rs  forms.rs  lib.rs  main.rs  pdf_engine.rs
src-tauri/src/ocr/: mod.rs  models.rs  pdf_embed.rs
src-tauri/ui/: AppWindow.slint
src/modules/: api.js  commandPalette.js  constants.js  contextMenu.js  debug.js  events.js  export.js  ocr.js  renderer.js  scanner.js  search.js  settings.js  state.js  tools.js  ui.js
src/modules/core/: tauri-bridge.js
src/ocr/: models.rs
src/platform/: mod.rs  windows.rs
src/styles/: index.css
src/styles/base/: reset.css  typography.css  variables.css
src/styles/components/: buttons.css  forms.css  modal.css  ocr.css  search.css  sidebar.css  tabs.css  toast.css  toolbar.css
src/styles/layout/: status-bar.css  viewer.css
src/styles/utilities/: animations.css  responsive.css  scrollbar.css
src/ui/: mod.rs  sidebar.rs  tabs.rs  theme.rs  toolbar.rs
src/update/: annotations.rs  app.rs  bookmarks.rs  export.rs  misc.rs  mod.rs  navigation.rs  render.rs  search.rs  tabs.rs
tests/: benchmark_test.rs  redaction_test.rs  ui_test.rs  visual_regression.rs
tests/snapshots/: visual_regression__page_render_result.snap
ui/: AppWindow.slint  theme.slint  widgets.slint
winprint-0.2.0/: .cargo_vcs_info.json  Cargo.toml  build.rs
