[package]
name = "pdfbull"
version = "0.1.0"
description = "A lightweight PDF reader"
authors = ["SV-stark"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/SV-stark/PDFbull"
repository = "https://github.com/SV-stark/PDFbull"

[dependencies]
iced = { version = "0.13", features = ["image", "svg", "canvas", "tokio", "advanced"] }
pdfium-render = "0.8"
tokio = { version = "1.0", features = ["full"] }
rfd = "0.14"
zune-image = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5"
rayon = "1.10"
dark-light = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webbrowser = "1.2.0"
thiserror = "1.0"
lopdf = "0.34"
winprint = { version = "0.2.0", features = ["pdfium"] }
oxipng = { version = "10.1.0", default-features = false, features = ["parallel"] }
chrono = { version = "0.4.44", features = ["serde", "clock"] }
quick_cache = "0.6.20"
human-panic = "2.0"
notify = "6.1"
notify-debouncer-mini = "0.4"

[build-dependencies]
winresource = "0.1"
