[package]
name = "pdfbull"
version = "0.3.0"
description = "A lightweight PDF reader"
authors = ["SV-stark"]
edition = "2024"
license = "MIT"
homepage = "https://github.com/SV-stark/PDFbull"
repository = "https://github.com/SV-stark/PDFbull"

[dependencies]
iced = { version = "0.14", features = ["image", "svg", "canvas", "tokio", "advanced"] }
iced_draggable_tabs = "0.1"
pdfium-render = { version = "0.8", features = ["thread_safe"] }
tokio = { version = "1.0", features = ["full"] }
rfd = "0.14"
native-dialog = "0.7"
zune-image = "0.4"
zune-core = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5"
rayon = "1.10"
dark-light = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
open = "5"
thiserror = "2.0"
arboard = "3"
lopdf = "0.34"
pdf-writer = "0.12"
font-kit = "0.14"
winprint = { version = "0.2.0", features = ["pdfium"] }
oxipng = { version = "10.1.0", default-features = false, features = ["parallel"] }
time = { version = "0.3", features = ["serde", "formatting", "macros"] }
quick_cache = "0.6.20"
mimalloc = "0.1"
bytes = "1.5"
human-panic = "2.0"
notify = "8"
notify-debouncer-full = "0.7"
interprocess = { version = "2", features = ["tokio"] }
windows = { version = "0.62.2", features = ["Win32_UI_Shell", "Win32_System_Com", "Win32_Foundation"] }
crossbeam-channel = "0.5.15"

[dev-dependencies]
iced_test = "0.14"
insta = { version = "1.46.3", features = ["redactions"] }
divan = "0.1.14"
sha2 = "0.10.9"

[build-dependencies]
winresource = "0.1"

[[bench]]
name = "render_bench"
harness = false

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[patch.crates-io]
winprint = { path = "winprint-0.2.0" }

