[package]
name = "pdfbull"
version = "0.8.1"
description = "A lightweight PDF reader"
authors = ["SV-stark"]
edition = "2024"
resolver = "3"
license = "MIT"
homepage = "https://github.com/SV-stark/PDFbull"
repository = "https://github.com/SV-stark/PDFbull"

[dependencies]
iced = { version = "0.14", features = ["image", "svg", "canvas", "tokio", "advanced"] }
iced_draggable_tabs = "0.1"
zpdf = { version = "0.10", features = ["cpu-render", "gpu-render"] }
zpdf-render-cpu = "0.10"
zpdf-render-wgpu = "0.10"
tokio = { version = "1.0", features = ["full"] }
rfd = "0.17"
zune-image = "0.5"
zune-core = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6"
rayon = "1.10"
dark-light = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
open = "5"
thiserror = "2.0"
arboard = "3"
lopdf = "0.44"
pdf-writer = "0.15"
csscolorparser = "0.8"
timeago = "0.6"
atomicwrites = "0.4"
oxipng = { version = "10.1.0", default-features = false, features = ["parallel"] }
time = { version = "0.3", features = ["serde", "formatting", "macros"] }
quick_cache = "0.7"
mimalloc = "0.1"
human-panic = "2.0"
notify = "8"
notify-debouncer-full = "0.7"
interprocess = { version = "2", features = ["tokio"] }
crossbeam-channel = "0.5.15"

[target.'cfg(windows)'.dependencies]
winprint = { version = "0.2.0", default-features = false }
windows = { version = "0.62.2", features = ["Win32_UI_Shell", "Win32_System_Com", "Win32_Foundation"] }

[dev-dependencies]
iced_test = "0.14"
insta = { version = "1.46.3", features = ["redactions"] }
divan = "0.1.14"
sha2 = "0.11"

[build-dependencies]
winresource = "0.1"

[[bench]]
name = "render_bench"
harness = false

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# The profile that 'dist' will build with
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.dist]
inherits = "release"
lto = "thin"
strip = true

[patch.crates-io]
winprint = { path = "winprint-0.2.0" }

