[package]
name = "pdfbull"
version = "0.1.0"
description = "A lightweight PDF reader"
authors = ["SV-stark"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/SV-stark/PDFbull"
repository = "https://github.com/SV-stark/PDFbull"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pdfbull_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
micropdf = { version = "0.9.0", features = ["parallel", "async","jpeg2000"] }
image = "0.25"
imageproc = "0.24"
base64 = "0.21"

