[package]
name = "pdfbull"
version = "0.1.0"
description = "A lightweight PDF reader"
authors = ["SV-stark"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/SV-stark/PDFbull"
repository = "https://github.com/SV-stark/PDFbull"
readme = "../README.md"

[lib]
name = "pdfbull_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
slint-build = "1.15"

[dependencies]
slint = "1.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pdfium-render = "0.8"
image = "0.25"
tokio = { version = "1", features = ["full"] }
rayon = "1.10"
rfd = "0.15"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
